Fix social buttons being off-screen on some phones

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ html {
         justify-content: space-between;
 
         position: absolute;
-        bottom: 5%;
+        bottom: 15%;
     }
 
     html {
